--- a/src/Vistas/MultiVentana.form
+++ b/src/Vistas/MultiVentana.form
@@ -1788,6 +1788,9 @@
                                 </Property>
                                 <Property name="text" type="java.lang.String" value="Agregar"/>
                               </Properties>
+                              <Events>
+                                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAgregarPersonalActionPerformed"/>
+                              </Events>
                             </Component>
                             <Component class="javax.swing.JLabel" name="lblCargoPersonal">
                               <Properties>
